--- a/index.html
+++ b/index.html
@@ -7,14 +7,14 @@
     <h1>Javascript Projects</h1>
     <ol>
         <li><a href="Project1/index.html">HTML Form Validation</a></li><br><br>
-        <li><a href="Project2/index.html"></a></li><br><br>
-        <li><a href="Project3/index.html"></a></li><br><br>
-        <li><a href="Project4/index.html"></a></li><br><br>
-        <li><a href="Project5/index.html"></a></li><br><br>
-        <li><a href="Project6/index.html"></a></li><br><br>
-        <li><a href="Project7/index.html"></a></li><br><br>
-        <li><a href="Project8/index.html"></a></li><br><br>
-        <li><a href="Project9/index.html"></a></li><br><br>
+        <li><a href="Project2/index.html">Movie Seat Selector</a></li><br><br>
+        <li><a href="Project3/index.html">Custom Video Player</a></li><br><br>
+        <li><a href="Project4/index.html">Exchange Rate Calculator</a></li><br><br>
+        <li><a href="Project5/index.html">DOM Array Methods</a></li><br><br>
+        <li><a href="Project6/index.html">Landing Page</a></li><br><br>
+        <li><a href="Project7/index.html">Classic Hangman Game</a></li><br><br>
+        <li><a href="Project8/index.html">Random Meal Generator</a></li><br><br>
+        <li><a href="Project9/index.html">Expense Tracker</a></li><br><br>
     </ol>
 </body>
 </html>
