--- a/Project2/index.html
+++ b/Project2/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Seat Selector</title>
+    <title>Seat Selector | Ali</title>
 </head>
 <body>
     <!-- This is the select box for what movie the user wants to watch -->
