--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@
         <li><a href="Project7/index.html">Classic Hangman Game</a></li><br><br>
         <li><a href="Project8/index.html">Random Meal Generator</a></li><br><br>
         <li><a href="Project9/index.html">Expense Tracker</a></li><br><br>
+        <li><a href="Project10/index.html">Music Player</a></li><br><br>
+        <li><a href="Project11/index.html">Infinite Scrolling App</a></li><br><br>
+        <li><a href="Project12/index.html">Fast Typing Game</a></li><br><br>
     </ol>
 </body>
 </html>
