--- a/Project9/index.html
+++ b/Project9/index.html
@@ -9,7 +9,7 @@
     <title>Expense Tracker | Ali</title>
 </head>
 <body>
-    <h2>Expense Tracker</h2>
+    <h2 id="title">Expense Tracker</h2>
     <div class="container">
         <!-- Overall account balance -->
         <h4>Account Balance</h4>
@@ -30,22 +30,19 @@
         <!-- Transaction History -->
         <h3>History</h3>
         <!-- List of Transactions -->
-        <ul id="list" class="list">
-            <!-- <li class="credit">Salary <span>+$5,000</span> <button class="delete-btn"><i class="far fa-trash-alt"></i></button> </li>
-            <li class="debit">Dinner Party <span>-$1,000</span> <button class="delete-btn"><i class="far fa-trash-alt"></i></button> </li> -->
-        </ul>
+        <ul id="list" class="list"></ul>
         <!-- Form to Add a New Transaction -->
         <h3>Add Transaction</h3>
         <form id="add-form">
             <div class="form-control">
                 <label for="reason">Description</label>
-                <input type="text" id="reason" placeholder="Enter reason for transaction." >
+                <input type="text" id="reason" placeholder="Enter reason for transaction" >
             </div>
             <div class="form-control">
                 <label for="amount">Transaction amount</label>
-                <input type="number" id="amount" placeholder="Enter transaction amount." >
+                <input type="number" id="amount" placeholder="Enter transaction amount" >
             </div>
-            <button class="btn">Add Transaction</button>
+            <button id="btn" class="btn" onclick={addTransaction}>Add Transaction</button>
         </form>
     </div>
 
