--- a/index.html
+++ b/index.html
@@ -2,22 +2,31 @@
 <html lang="en">
 <head>
     <title>Javascript Projects | Ali</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <h1>Javascript Projects</h1>
     <ol>
-        <li><a href="Project1/index.html">HTML Form Validation</a></li><br><br>
-        <li><a href="Project2/index.html">Movie Seat Selector</a></li><br><br>
-        <li><a href="Project3/index.html">Custom Video Player</a></li><br><br>
-        <li><a href="Project4/index.html">Exchange Rate Calculator</a></li><br><br>
-        <li><a href="Project5/index.html">DOM Array Methods</a></li><br><br>
-        <li><a href="Project6/index.html">Landing Page</a></li><br><br>
-        <li><a href="Project7/index.html">Classic Hangman Game</a></li><br><br>
-        <li><a href="Project8/index.html">Random Meal Generator</a></li><br><br>
-        <li><a href="Project9/index.html">Expense Tracker</a></li><br><br>
-        <li><a href="Project10/index.html">Music Player</a></li><br><br>
-        <li><a href="Project11/index.html">Infinite Scrolling App</a></li><br><br>
-        <li><a href="Project12/index.html">Fast Typing Game</a></li><br><br>
+        <li class="projects-1"><a href="Project1/index.html">HTML Form Validation</a></li><br><br>
+        <li class="projects-2"><a href="Project2/index.html">Movie Seat Selector</a></li><br><br>
+        <li class="projects-3"><a href="Project3/index.html">Custom Video Player</a></li><br><br>
+        <li class="projects-4"><a href="Project4/index.html">Exchange Rate Calculator</a></li><br><br>
+        <li class="projects-5"><a href="Project5/index.html">DOM Array Methods</a></li><br><br>
+        <li class="projects-6"><a href="Project6/index.html">Landing Page</a></li><br><br>
+        <li class="projects-7"><a href="Project7/index.html">Classic Hangman Game</a></li><br><br>
+        <li class="projects-8"><a href="Project8/index.html">Random Meal Generator</a></li><br><br>
+        <li class="projects-9"><a href="Project9/index.html">Expense Tracker</a></li><br><br>
+        <li class="projects-10"><a href="Project10/index.html">Music Player</a></li><br><br>
+        <li class="projects-11"><a href="Project11/index.html">Infinite Scrolling App</a></li><br><br>
+        <li class="projects-12"><a href="Project12/index.html">Fast Typing Game</a></li><br><br>
+        <li class="projects-13"><a href="Project13/index.html">Memory Cards</a></li><br><br>
+        <li class="projects-14"><a href="Project14/index.html">Text to Speech App</a></li><br><br>
+        <li class="projects-15"><a href="Project15/index.html">Search for Lyrics</a></li><br><br>
+        <li class="projects-16"><a href="Project16/index.html">Breathing Exercise for Relaxing</a></li><br><br>
+        <li class="projects-17"><a href="Project17/index.html">Sortable List</a></li><br><br>
+        <li class="projects-18"><a href="Project18/index.html">Breakout</a></li><br><br>
+        <li class="projects-19"><a href="Project19/index.html">New Year Countdown</a></li><br><br>
+        <li class="projects-20"><a href="Project20/index.html">Fast Typing Game</a></li><br><br>
     </ol>
 </body>
 </html>
